--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,4 +49,14 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
         android:backgroundTint="#eba152"/>
 
+    <Button
+        android:id="@+id/buttonSignUp"
+        android:layout_width="154dp"
+        android:layout_height="51dp"
+        android:layout_below="@id/buttonSubmit"
+        android:backgroundTint="#eba152"
+        android:text="Sign Up"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSubmit"
+        tools:layout_editor_absoluteX="104dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
