--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,22 +3,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_home"
-        android:title="Chats"
+        android:title="@string/chats"
         />
 
     <item
         android:id="@+id/nav_gallery"
-        android:title="Events"
+        android:title="@string/events"
          />
 
     <item
         android:id="@+id/nav_search"
-        android:title="TO DO"
+        android:title="@string/to_do"
          />
 
     <item
         android:id="@+id/nav_profile"
-        android:title="Split-wise"
+        android:title="@string/split_wise"
          />
 
 </menu>
