--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,12 +4,12 @@
     <item
         android:id="@+id/nav_home"
         android:title="@string/chats"
-        />
+        android:icon="@drawable/ic_menu_camera"/>
 
     <item
         android:id="@+id/nav_gallery"
         android:title="@string/events"
-         />
+        android:icon="@drawable/ic_menu_camera"/>
 
     <item
         android:id="@+id/nav_search"
@@ -18,7 +18,7 @@
 
     <item
         android:id="@+id/nav_profile"
-        android:title="@string/split_wise"
+        android:title="@string/balances"
          />
 
 </menu>
