--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,23 +2,25 @@
 <!-- bottom_nav_menu.xml -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_chats"
         android:title="@string/chats"
-        android:icon="@drawable/ic_menu_camera"/>
+        android:icon="@drawable/baseline_chat_24"/>
 
     <item
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_events"
         android:title="@string/events"
-        android:icon="@drawable/ic_menu_camera"/>
+        android:icon="@drawable/baseline_deck_24"/>
 
     <item
-        android:id="@+id/nav_search"
+        android:id="@+id/nav_to_do"
         android:title="@string/to_do"
+        android:icon="@drawable/baseline_list_alt_24"
          />
 
     <item
-        android:id="@+id/nav_profile"
+        android:id="@+id/nav_balance"
         android:title="@string/balances"
+        android:icon="@drawable/baseline_account_balance_wallet_24"
          />
 
 </menu>
