--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,11 +7,11 @@
         <item
             android:id="@+id/nav_calendar"
             android:icon="@drawable/baseline_calendar_month_24"
-            android:title="Calendar" />
+            android:title="@string/calendar" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/baseline_settings_24"
-            android:title="Settings" />
+            android:title="@string/settings" />
 
     </group>
 </menu>
