--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="card_background">#F2D5C3</color>
+    <color name="icon_color">#2B2B2B</color>
+
+    <!--  Chat Related Colors  -->
+    <color name="curr_user_msg">#F2D5C3</color>
+    <color name="other_user_msg">#C1C1C1</color>
+    <color name="ai_msg">#EB5552</color>
 </resources>
