--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -47,13 +47,6 @@
                 android:layout_marginTop="18dp"
                 android:text="@string/your_current_dietary_restrictions"
                 android:layout_marginBottom="10dp"/>
-            <TextView
-                android:id="@+id/dietary_restrictions_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="Vegetarian"
-                android:layout_marginBottom="10dp"/>
             <Spinner
                 android:id="@+id/dietary_restrictions_input"
                 android:layout_width="match_parent"
@@ -70,13 +63,6 @@
                 android:layout_marginTop="18dp"
                 android:text="@string/your_current_activity_preferences"
                 android:layout_marginBottom="10dp"/>
-            <TextView
-                android:id="@+id/activity_preferences_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="Ping-pong, Axe Throwing, Eating"
-                android:layout_marginBottom="10dp"/>
             <EditText
                 android:id="@+id/activity_preferences_input"
                 android:layout_width="match_parent"
@@ -92,14 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
-                android:text="Your availability"
-                android:layout_marginBottom="10dp"/>
-            <TextView
-                android:id="@+id/availability_preferences_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="Ping-pong, Axe Throwing, Eating"
+                android:text="@string/your_availability"
                 android:layout_marginBottom="10dp"/>
             <EditText
                 android:id="@+id/availability_input"
@@ -109,46 +88,6 @@
                 android:textSize="18dp"
                 android:hint="@string/food_preference_hint"
                 android:layout_marginBottom="10dp"/>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_gravity="center">
-                <Button
-                    android:id="@+id/save_settings_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Save"
-                    android:layout_weight="0.5"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"/>
-
-                <Button
-                    android:id="@+id/cancel_settings_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Cancel"
-                    android:layout_weight="0.5"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"/>
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/text_settings"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:text="This is settings fragment"
-                android:textAlignment="center"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
     </ScrollView>
 
