--- a/app/src/main/res/layout/custom_balances_layout.xml
+++ b/app/src/main/res/layout/custom_balances_layout.xml
@@ -22,43 +22,63 @@
             android:padding="5dp">
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/balancesImageView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_launcher_background" />
 
             <TextView
-                android:id="@+id/TODOtextTitle"
+                android:id="@+id/balancesUserName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="Sample Card Title"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintBottom_toTopOf="@+id/balanacesOweStatus"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/balancesImageView"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/textDesc" />
+                tools:text="FirstName LastName" />
 
             <TextView
-                android:id="@+id/textDesc"
-                android:layout_width="0dp"
+                android:id="@+id/balanacesOweStatus"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Sample Card Descriptions"
+                android:textColor="@color/pastel_red"
                 android:textSize="18sp"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/TODOtextTitle"
-                app:layout_constraintBottom_toBottomOf="parent" />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/balancesImageView"
+                app:layout_constraintTop_toBottomOf="@+id/balancesUserName"
+                tools:text="You are owed: " />
+
+            <TextView
+                android:id="@+id/balancesAmount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/balanacesOweStatus"
+                app:layout_constraintTop_toBottomOf="@+id/balancesUserName"
+                app:layout_constraintVertical_bias="0.566"
+                tools:text="25 " />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
