--- a/app/src/main/res/layout/chat_individual.xml
+++ b/app/src/main/res/layout/chat_individual.xml
@@ -14,8 +14,8 @@
         android:maxWidth="250dp"
         android:paddingTop="10dp"
         android:paddingStart="10dp"
+        android:textColor="@color/text_on_background"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/black"
         app:layout_constraintStart_toEndOf="@id/messengerImageView"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Person 1" />
@@ -46,10 +46,10 @@
         android:id="@+id/messengerImageView"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginBottom="15dp"
         android:src="@drawable/baseline_account_circle_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/chat_name"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
