--- a/app/src/main/res/layout/message_group.xml
+++ b/app/src/main/res/layout/message_group.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/outer_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,19 +8,8 @@
     android:background="@drawable/rounded_borders_15dp"
     android:backgroundTint="@color/card_background"
     android:layout_margin="10dp"
-    android:padding="5dp">
-
-    <TextView
-        android:id="@+id/message_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxWidth="250dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        app:layout_constraintStart_toStartOf="@id/message_sender"
-        app:layout_constraintTop_toBottomOf="@id/message_sender"
-        tools:text="Lets do something tomorrow" />
+    android:padding="5dp"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/message_sender"
@@ -34,6 +24,18 @@
         tools:text="Sahil: " />
 
     <TextView
+        android:id="@+id/message_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxWidth="250dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        app:layout_constraintStart_toStartOf="@id/message_sender"
+        app:layout_constraintTop_toBottomOf="@id/message_sender"
+        tools:text="Lets do something tomorrow" />
+
+    <TextView
         android:id="@+id/message_timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -42,6 +44,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/message_text"
-        tools:text="12:05 pm" />
+        tools:text="12:05 pm"
+        android:layout_gravity="end"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
