--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,7 @@
         android:id="@+id/nav_settings"
         android:name="com.example.plantastic.ui.settings.SettingsFragment"
         android:label="@string/settings"
-        tools:layout="@layout/fragment_settings" />
+        tools:layout="@xml/root_preferences" />
 
     <fragment
         android:id="@+id/nav_chats"
