--- a/app/src/main/res/layout/message_group.xml
+++ b/app/src/main/res/layout/message_group.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/outer_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="5dp"
     android:background="@drawable/rounded_borders_15dp"
-    android:backgroundTint="@color/card_background"
-    android:layout_margin="10dp"
-    android:padding="5dp"
-    android:orientation="vertical">
+    android:backgroundTint="@color/other_user_msg"
+    android:minWidth="120dp"
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/message_sender"
@@ -33,18 +34,19 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         app:layout_constraintStart_toStartOf="@id/message_sender"
         app:layout_constraintTop_toBottomOf="@id/message_sender"
-        tools:text="Lets do something tomorrow" />
+        tools:text="Let's do something tomorrow" />
 
     <TextView
         android:id="@+id/message_timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginStart="25dp"
         android:paddingHorizontal="10dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/message_text"
-        tools:text="12:05 pm"
-        android:layout_gravity="end"/>
+        tools:text="12:05 pm" />
 
 </LinearLayout>
