--- a/app/src/main/res/layout/message_individual.xml
+++ b/app/src/main/res/layout/message_individual.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/rounded_borders_15dp"
-    android:backgroundTint="@color/card_background"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp"
+    android:background="@drawable/rounded_borders_15dp"
+    android:backgroundTint="@color/other_user_msg"
+    android:minWidth="120dp"
     android:padding="5dp">
 
     <TextView
