--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 
     <!--  Chat Related Colors  -->
     <color name="curr_user_msg">#F2D5C3</color>
-    <color name="other_user_msg">#C1C1C1</color>
+    <color name="other_user_msg">#EDEDED</color>
     <color name="ai_msg">#EB5552</color>
     <color name="text_on_background">#FF000000</color>
     <color name="write_msg_background">#DFDFDF</color>
