--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,13 +24,7 @@
                 android:text="@string/your_current_food_preferences"
                 android:textSize="18sp"
                 android:layout_marginBottom="10dp"/>
-            <TextView
-                android:id="@+id/food_preferences_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="None"
-                android:layout_marginBottom="10dp"/>
+
             <EditText
                 android:id="@+id/food_preferences_input"
                 android:layout_width="match_parent"
@@ -67,13 +61,7 @@
                 android:textSize="18sp"
                 android:text="@string/your_current_activity_preferences"
                 android:layout_marginBottom="10dp"/>
-            <TextView
-                android:id="@+id/activity_preferences_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:text="None"
-                android:layout_marginBottom="10dp"/>
+
             <EditText
                 android:id="@+id/activity_preferences_input"
                 android:layout_width="match_parent"
@@ -395,14 +383,14 @@
                     android:text="@string/busy_button_text"/>
             </LinearLayout>
 
-
             <Button
                 android:id="@+id/profile_save_button"
                 android:text="@string/save"
                 android:layout_width="120dp"
                 android:layout_height="50dp"
                 android:textSize="14sp"
-                android:layout_gravity="bottom|center"/>
+                android:layout_gravity="bottom|center"
+                android:layout_marginBottom="20dp"/>
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
