--- a/app/src/main/res/layout/custom_transactions_layout.xml
+++ b/app/src/main/res/layout/custom_transactions_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#ccc"
     android:padding="10dp">
 
@@ -22,20 +22,24 @@
             android:padding="5dp">
 
             <TextView
+                android:id="@+id/transactionsDescription"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/transactionsDescription"/>
+                android:layout_height="wrap_content"/>
 
             <TextView
+                android:id="@+id/transactionsSentence"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/transactionsSentence"/>
+                android:layout_below="@id/transactionsDescription"/>
 
             <TextView
+                android:id="@+id/transactionDate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/transactionDate"/>
+                android:layout_below="@id/transactionsSentence"/>
 
         </RelativeLayout>
+
     </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
