--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="card_background">#F2D5C3</color>
+    <color name="icon_color">#2B2B2B</color>
+
     <color name="pastel_red">#EB5552</color>
+    <color name="pastel_green">#66cc66</color>
     <color name="red">#b3201f</color>
     <color name="yellow">#eba152</color>
     <color name="yellow_var">#c55932</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="card_background">#F2D5C3</color>
-    <color name="icon_color">#2B2B2B</color>
 
     <!--  Chat Related Colors  -->
     <color name="curr_user_msg">#F2D5C3</color>
