partially working search bar

--- a/app/src/main/res/layout/fragment_add_friends.xml
+++ b/app/src/main/res/layout/fragment_add_friends.xml
@@ -5,9 +5,23 @@
     android:layout_height="match_parent"
     tools:context=".ui.friends.AddFriendsFragment">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        tools:context=".MainActivity">
+
+        <EditText
+            android:id="@+id/editTextSearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Search"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/addFriendsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/editTextSearch"/>
+    </RelativeLayout>
+
 
 </FrameLayout>
