--- a/app/src/main/res/layout/custom_search_users_layout.xml
+++ b/app/src/main/res/layout/custom_search_users_layout.xml
@@ -1,13 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <TextView
-        android:id="@+id/searchTextViewItem"
+        android:id="@+id/searchNameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:paddingTop="16dp"
+        android:paddingBottom="8dp"
+        android:paddingStart="16dp"
+        android:textStyle="bold"
+        tools:text="First Name Last Name" />
+
+    <TextView
+        android:id="@+id/searchUsernameTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/searchNameTextView"
         android:textSize="16sp"
-        android:padding="10dp" />
-</RelativeLayout>
+        android:paddingTop="4dp"
+        android:paddingBottom="10dp"
+        android:paddingStart="16dp"
+        tools:text="Username" />
 
+    <ImageView
+        android:id="@+id/iconImageView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="16dp"
+        android:src="@drawable/baseline_person_add_alt_1_24"
+        tools:src="@drawable/ic_launcher_foreground" />
+
+</RelativeLayout>
