navigation to new fragment works

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -52,4 +52,11 @@
         android:name="com.example.plantastic.ui.friends.AddFriendsFragment"
         android:label="@string/nav_add_friends"
         tools:layout="@layout/fragment_add_friends" />
+
+    <fragment
+        android:id="@+id/nav_new_chat"
+        android:name="com.example.plantastic.ui.newchat.NewChatFragment"
+        android:label="@string/nav_new_chat"
+        tools:layout="@layout/fragment_new_chat" />
+
 </navigation>
