--- a/app/src/main/res/layout/fragment_new_chat.xml
+++ b/app/src/main/res/layout/fragment_new_chat.xml
@@ -5,9 +5,30 @@
     android:layout_height="match_parent"
     tools:context=".ui.newchat.NewChatFragment">
 
-    <TextView
+    <!-- res/layout/fragment_new_chat.xml -->
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_height="match_parent">
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:background="?attr/colorPrimary"
+            android:elevation="6dp"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:contentDescription="Tab Layout for navigation" />
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/tabLayout"
+            android:contentDescription="View Pager for displaying content" />
+
+    </RelativeLayout>
 
 </FrameLayout>
