--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -55,19 +55,19 @@
 
     <fragment
         android:id="@+id/nav_new_chat"
-        android:name="com.example.plantastic.ui.newchat.NewChatFragment"
+        android:name="com.example.plantastic.ui.new_chat.NewChatFragment"
         android:label="@string/nav_new_chat"
         tools:layout="@layout/fragment_new_chat" />
 
     <fragment
         android:id="@+id/nav_new_chat_individual"
-        android:name="com.example.plantastic.ui.newchat.NewIndividualChatFragment"
+        android:name="com.example.plantastic.ui.new_friend_chat.NewIndividualChatFragment"
         android:label="@string/nav_new_individual_chat"
         tools:layout="@layout/fragment_new_individual_chat" />
 
     <fragment
         android:id="@+id/nav_new_chat_group"
-        android:name="com.example.plantastic.ui.newchat.NewGroupChatFragment"
+        android:name="com.example.plantastic.ui.new_group.NewGroupChatFragment"
         android:label="@string/nav_new_group"
         tools:layout="@layout/fragment_new_group" />
 
