--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+
+        <!-- Got help from: https://stackoverflow.com/questions/68241378/unable-to-change-the-color-of-action-bar-in-the-app -->
+        <item name="actionBarStyle">@style/Widget.MaterialComponents.ActionBar.Primary</item>
     </style>
 
     <style name="Theme.Plantastic.NoActionBar">
@@ -22,4 +25,5 @@
     <style name="Theme.Plantastic.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Plantastic.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
